--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/logox.png" />
     <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/alk-rounded-mtav-med/css/alk-rounded-mtav-med.min.css">
     <link href="./output.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geoinvests</title>
@@ -27,5 +29,9 @@
       <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1611150276411206&ev=PageView&noscript=1"
       /></noscript>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
   </body>
 </html>
